--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,9 +24,9 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-        working-directory: ./movie-search-assignment
+        working-directory: ./assignment-1
 
       - name: Run tests
         # For example, using `pytest`
         run: pytest tests
-        working-directory: ./movie-search-assignment
+        working-directory: ./assignment-1
